# fMSX-go

./: CMakeLists.txt  sdkconfig  show_files
main/: CMakeLists.txt
main/EMULib/: Sound.c
main/odroid-go-common/: odroid_audio.c  odroid_display.c  odroid_input.c  odroid_sdcard.c  odroid_settings.c  odroid_system.c
main/odroidGo/: CMakeList.txt
main/ugui/: CMakeList.txt  ugui.c
main/utils/: utils.c
