idf_component_register(SRCS 
"odroid-go-common/odroid_settings.c"
"odroid-go-common/odroid_system.c"
"odroid-go-common/odroid_audio.c"
"odroid-go-common/odroid_sdcard.c"
"odroid-go-common/odroid_input.c"
"odroid-go-common/odroid_display.c"
"minIni/minIni.c"
"utils/utils.c"
"fMSX/Menu.c"
"fMSX/fMSX.c"
"fMSX/V9938.c"
"fMSX/Patch.c"
"fMSX/I8251.c"
"fMSX/MSX.c"
"Z80/Z80.c"
"Z80/ConDebug.c"
"Z80/Debug.c"
"ugui/ugui.c"
"EMULib/SHA1.c"
"EMULib/NetPlay.c"
"EMULib/AY8910.c"
"EMULib/IPS.c"
"EMULib/WD1793.c"
"EMULib/YM2413.c"
"EMULib/EMULib.c"
"EMULib/Touch.c"
"EMULib/Record.c"
"EMULib/Floppy.c"
"EMULib/Hunt.c"
"EMULib/FDIDisk.c"
"EMULib/Sound.c"
"EMULib/I8255.c"
"EMULib/Console.c"
"EMULib/Image.c"
"EMULib/SCC.c"
"EMULib/MCF.c"
"odroidGo/Menu.c"
"odroidGo/Multiplayer.c"
"odroidGo/Audio.c"
"odroidGo/LibOdroidGo.c"
"odroidGo/files.c"
"fMSXgo_main.c"
INCLUDE_DIRS "."
"EMULib"
"Z80"
"fMSX"
"minIni"
"odroid-go-common"
"odroidGo"
"ugui"
"utils"
"video"
)
